# container-playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: flatdict.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_Dict.cpp
